      been split off of it and into a dependency.
    - Add bugreporter-udeb to the i386 root floppy, to cdrom images, and even
      to netboot images, so users can use it to report bugs earlier. Add
      commented out versions to other images on which it won't be very useful,
      since it currently required floppy support.
  * Kurt Roeckx
    - Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
      package list.
  * Christian Perrier
    - Add the list of needed characters for Kazakh
    - Add the list of needed characters for Vietnamese
  * Colin Watson
    - Force HOME=$(TEMP) for hfsutils calls throughout powerpc
      hd_media_common target.
    - Ship yaboot with powerpc hd-media images.
    - Add rescue stanzas to yaboot configuration files.
    - Document raised kernel command-line limits in 2.6.9.
    - Remove devfs=mount from yaboot configuration files. It shouldn't be
      needed any more.
    - Don't remove modules.*map from the initrd if we're using real hotplug.
    - Use the kernel-specific discover and isa-pnp-modules include files
      rather than explicitly listing those udebs throughout pkg-lists.
    - Make a note about another possible cause for 'locale charmap' being
      wrong during font generation, since it confused me for days ...
  * Frans Pop
    - Fix logic error in build/util/pkg-list to get rid of incorrect warnings
      about missing lists.

 -- Frans Pop <aragorn@tiscali.nl>  Thu, 28 Apr 2005 20:47:19 +0200

debian-installer (2005xxxx) UNRELEASED; urgency=low

  * Frans Pop
    - Add build dependencies needed to build PDF/TXT versions of the manual
    - Make main build script for the manual fail on errors
  * Joey Hess
    - Copyright file updates for 2005.

 -- Frans Pop <aragorn@tiscali.nl>  Thu, 24 Mar 2005 01:12:46 +0100

debian-installer (20050317) unstable; urgency=low

  * Frans Pop
    - Add German and Russian for official builds of the manual