@@ -66,4 +66,11 @@ WRITE_MEDIA = floppy
 # some mapping MEDIUM -> TYPE
 TYPE = $(MEDIUM)
 
+# Description of the initrd-list files.
 MANIFEST-INITRD_LIST = "contents of initrd"
+
+# Used to write a /etc/lsb-release file in the installer initrd.
+LSB_DISTRIB_ID=Debian
+LSB_DISTRIB_DESCRIPTION="Debian GNU/Linux installer"
+# Inlude the build date of the installer in here.
+LSB_DISTRIB_RELEASE="3.1 (installer build $(BUILD_DATE))"
