@@ -65,6 +65,12 @@ debian-installer (trunk) UNRELEASED; urgency=low
       to netboot images, so users can use it to report bugs earlier. Add
       commented out versions to other images on which it won't be very useful,
       since it currently required floppy support.
+    - Update the manual for the /var/log/debian-installer ->
+      /var/log/installer move.
+    - Update the manual for the bugreporter-udeb rename, and for its
+      new capailities.
+    - Add an /etc/lsb-release file to the initrd, which includes the image
+      build date. Useful for determining the provenance of an image.
   * Kurt Roeckx
     - Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
       package list.
